# low-cost-bnn

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: py310_pytorch_pixi.toml  py310_tensorflow_pixi.toml
data/: example_evidential_settings.json  example_noise_contrastive_settings.json
src/low_cost_bnn/models/: evidential_pytorch.py  evidential_tensorflow.py  gaussian_process_tensorflow.py  noise_contrastive_pytorch.py  noise_contrastive_tensorflow.py  pytorch.py  tensorflow.py
src/low_cost_bnn/utils/: helpers.py  helpers_pytorch.py  helpers_tensorflow.py  pipeline_tools.py
src/low_cost_bnn/workflows/: hp_tuning_script_gpu.py  train_pytorch.py  train_pytorch_classifier.py  train_pytorch_evi.py  train_pytorch_evidential.py  train_pytorch_ncp.py  train_pytorch_regressor.py  train_pytorch_sngp.py  train_tensorflow.py  train_tensorflow_classifier.py  train_tensorflow_evi.py  train_tensorflow_evidential.py  train_tensorflow_ncp.py  train_tensorflow_regressor.py  train_tensorflow_sngp.py  tune_pytorch_ncp.py  tune_tensorflow_ncp.py
src/models/: tensorflow.py
src/utils/: helpers_tensorflow.py
src/workflows/: train_tensorflow.py
