[build-system]
requires = ["setuptools>=62.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "low_cost_bnn"
description = "Bayesian network network architecture with efficient approximative training"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {file = "LICENSE"}
keywords = ["machine learning", "Bayesian", "neural networks", "uncertainty", "epistemic", "aleatoric"]
authors = [
  {name = "Aaron Ho", email = "aaronkho@mit.edu" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]

dependencies = [
  "numpy<2.0.0",
  "scipy",
  "pandas",
  "tables",
  "scikit-learn"
]

[project.optional-dependencies]
dev = ["pytest", "coverage"]
tf = ["tensorflow==2.15.0", "tensorflow-probability==0.23.0", "onnx", "tf2onnx"]
torch = ["torch~=2.3", "onnx", "onnxscript"]

[project.urls]
"Homepage" = "https://github.com/aaronkho/low-cost-bnn"
"Bug Reports" = "https://github.com/aaronkho/low-cost-bnn/issues"
"Source" = "https://github.com/aaronkho/low-cost-bnn"

[project.scripts]
train_regressor_tensorflow = "low_cost_bnn.workflows.train_tensorflow_regressor:main"
train_classifier_tensorflow = "low_cost_bnn.workflows.train_tensorflow_classifier:main"
train_ncp_tensorflow = "low_cost_bnn.workflows.train_tensorflow_ncp:main"
train_evi_tensorflow = "low_cost_bnn.workflows.train_tensorflow_evi:main"
train_sngp_tensorflow = "low_cost_bnn.workflows.train_tensorflow_sngp:main"
train_regressor_pytorch = "low_cost_bnn.workflows.train_pytorch_regressor:main"
train_classifier_pytorch = "low_cost_bnn.workflows.train_pytorch_classifier:main"
train_ncp_pytorch = "low_cost_bnn.workflows.train_pytorch_ncp:main"
train_evi_pytorch = "low_cost_bnn.workflows.train_pytorch_evi:main"
train_sngp_pytorch = "low_cost_bnn.workflows.train_pytorch_sngp:main"

[tool.setuptools.dynamic]
version = {attr = "low_cost_bnn.__version__"}

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
# For usage with conda, pypi dependencies go in project.dependencies

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}
tf = {features = ["tf"], solve-group = "tf"}
torch = {features = ["torch"], solve-group = "torch"}

